<resources>
    <string name="app_name">Bookshelf</string>

    <string name="empty_string"></string>

    <string name="main_activity_title">Main</string>
    <string name="book_challenge_title">Book challenge</string>
    <string name="search_activity_title">Search</string>
    <string name="edit_book_title">%1$s. %2$s</string>
    <string name="about_book_title">%1$s. %2$s</string>

    <string name="edit_book_add_to_favorites">Add to favorites</string>
    <string name="edit_book_delete">Delete book</string>
    <string name="edit_book_rating">Your rating</string>
    <string name="edit_book_date_of_reading">Date of reading</string>
    <string name="edit_book_save">Save</string>
    <string name="edit_book_status">The status of the book</string>

    <string name="edit_book_process_status">In the process of reading</string>
    <string name="edit_book_plan_status">Plan to read</string>
    <string name="edit_book_finish_status">Finish reading</string>
    <string name="edit_book_quit_status">Quit reading</string>

    <string name="book_challenge_save_counter">The counter number is saved!</string>
    <string name="book_challenge_activity_list_empty">The list is empty</string>
    <string name="book_challenge_bookshelf">BookShelf</string>
    <string name="book_challenge_you_have_read">You have read</string>
    <string name="book_challenge_books_out_of">books out of</string>

    <string name="rating_about_book">Rating</string>

    <string name="profile_information_description">Information</string>
    <string name="profile_information_log_out">Log out</string>

    <string name="navigation_list_not_reading">Quit</string>
    <string name="navigation_list_read">Read</string>
    <string name="navigation_list_reading">Finish</string>
    <string name="navigation_list_want_to_read">Plan</string>

    <string name="navigation_main_challenge">Challenge</string>
    <string name="navigation_main_list_of_books">List of books</string>
    <string name="navigation_main_profile">Profile</string>
    <string name="navigation_main_search">Search</string>

    <string name="main_activity_list_empty">The list is empty...</string>

    <string name="about_book_publisher">Publisher:</string>
    <string name="about_book_published_date">Published date:</string>
    <string name="about_book_page_count">Page count:</string>
    <string name="about_book_language">Language:</string>
    <string name="about_book_description">About book</string>
    <string name="about_book_no_description">No description available</string>

    <string name="toolbar_go_to_main_activity">Go to main activity</string>
    <string name="toolbar_go_to_search_activity">Go to search activity</string>
    <string name="toolbar_go_to_book_challenge_activity">Go to book challenge</string>

    <string name="list_item_book_text_view_status">Status:</string>
    <string name="list_item_book_text_view_read_data">Read data:</string>
    <string name="list_item_search_add_book">Add book</string>

    <string name="book_search_author_unknown">Author unknown</string>
    <string name="book_search_title_unknown">Title unknown</string>

    <string name="book_is_not_found">The book is not found!</string>

    <string name="search_activity_empty_list">List is empty!</string>
    <string name="search_activity_try_later">Something went wrong...Please try later!</string>
    <string name="search_activity_enter_query">You didn\'t enter a search query!</string>
    <string name="search_activity_nothing_was_found">Nothing was found for your request!</string>

    <string name="profile_fragment_name">Name:</string>
    <string name="profile_fragment_gender">Gender:</string>
    <string name="profile_fragment_date_of_birth">Date of birth:</string>
    <string name="profile_fragment_information_about_profile">Information about profile</string>
    <string name="profile_fragment_plan">plan:</string>
    <string name="profile_fragment_finish">finish:</string>
    <string name="profile_fragment_quit">quit:</string>
    <string name="profile_fragment_progress">progress:</string>
    <string name="profile_fragment_number_of_books_with_the_status">Number of books with the status</string>
    <string name="search_fragment_search_the_entire_site">Search the entire site</string>

    <string name="register_fragment_login">Login</string>
    <string name="register_fragment_name">Name</string>
    <string name="register_fragment_email">Email</string>
    <string name="register_fragment_password">Password</string>
    <string name="register_fragment_repeat_password">Repeat the password</string>
    <string name="register_fragment_create_account">Create account</string>
    <string name="register_fragment_already_a_member">Already a member? Swipe right to login</string>

    <string name="register_fragment_email_invalid">You entered an invalid email</string>
    <string name="register_fragment_password_invalid">The password must be at least 8 characters long and must contain large letter, digit and character</string>
    <string name="register_fragment_passwords_not_match">Passwords don\'t match</string>
    <string name="register_fragment_registration_was_successful">Registration was successful</string>
    <string name="register_fragment_check_date">Check whether the data is correct</string>
    <string name="register_fragment_field_empty">The field must not be empty</string>
    <string name="register_fragment_already_registered">You are already registered</string>

    <string name="login_fragment_login_was_successful">Login was successful</string>
    <string name="login_fragment_no_account">No account yet? Swipe left to register</string>

    <string name="profile_fragment_log_out">Log out</string>
    <string name="profile_fragment_save">Save</string>
    <string name="profile_fragment_change_password">Change pass</string>
</resources>
