<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_edit_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            tools:text="Title" />

        <TextView
            android:id="@+id/tv_author_edit_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="@tools:sample/full_names" />

        <ImageView
            android:id="@+id/iv_edit_book"
            android:layout_width="@dimen/edit_book_width_iv"
            android:layout_height="@dimen/edit_book_height_iv"
            android:layout_gravity="center_horizontal"
            tools:src="@tools:sample/avatars" />

        <RatingBar
            android:id="@+id/tv_averRating_edit_book"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            tools:text="10" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/edit_book_status" />

            <Spinner
                android:id="@+id/spinner_status_edit_book"
                android:layout_width="@dimen/edit_book_width_sp"
                android:layout_height="@dimen/edit_book_height_sp"
                android:gravity="center_horizontal"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/edit_book_rating" />

            <RatingBar
                android:id="@+id/rb_rating_edit_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/btn_favorite"
                    android:layout_width="@dimen/edit_book_tb"
                    android:layout_height="@dimen/edit_book_tb"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:background="@drawable/button_favorite"
                    android:checked="false"
                    android:paddingBottom="@dimen/padding_8dp"
                    android:text="@string/empty_string"
                    android:textOff="@string/empty_string"
                    android:textOn="@string/empty_string" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_book_add_to_favorites" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save_edit_book"
                android:layout_width="@dimen/edit_book_width_btn"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_save" />

            <Button
                android:id="@+id/btn_delete_edit_book"
                android:layout_width="@dimen/edit_book_width_btn"
                android:layout_height="wrap_content"
                android:text="@string/edit_book_delete" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
