<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_create_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_48dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:text="@string/register_fragment_login"
        android:textSize="@dimen/text_size_super_title" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dp"
        android:hint="@string/register_fragment_email"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:padding="@dimen/padding_8dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:maxLength="50"
        android:textSize="@dimen/text_size_medium" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dp"
        android:hint="@string/register_fragment_password"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:padding="@dimen/padding_8dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:maxLength="20"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_medium" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginBottom="@dimen/margin_192dp"
        android:background="@drawable/my_button_bg"
        android:text="@string/register_fragment_login"/>

    <ImageView
        android:layout_width="@dimen/auth_fragment_swipe_image"
        android:layout_height="@dimen/auth_fragment_swipe_image"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:src="@drawable/ic_arrow_right"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_fragment_no_account"
        android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>
