<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        app:titleTextColor="@color/color_toolbar_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_about_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_author_about_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/full_names" />

            <ImageView
                android:id="@+id/img_about_book"
                android:layout_width="@dimen/default_image_view_width"
                android:layout_height="@dimen/default_image_view_height"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <RatingBar
                android:id="@+id/rb_rating_about_book"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:text="@string/about_book_publisher"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_publisher_about_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/full_names" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:text="@string/about_book_published_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_published_date_about_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/full_names" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:text="@string/about_book_page_count"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_page_count_about_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/full_names" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:text="@string/about_book_language"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_lang_about_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@tools:sample/full_names" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_description_about_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem/random" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

